Small fix to tabs when page becomes too narrow.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/www@6811 afe8dcc5-9094-451b-8773-5f495042a737

--- a/htdocs/vrmlengine.css
+++ b/htdocs/vrmlengine.css
@@ -258,6 +258,7 @@ div.header {
 
 .header_menu td.lower {
   padding: 0px; /* must be 0, otherwise bg of a:hover will not fill the cell */
+  vertical-align: bottom; /* needed when page becomes too narrow to fit all the items without breaking link captions into multiline */
 }
 .header_menu td.lower a         {
   display: block;
